Carlisle: harden payments, escrow and wallet ledger